Fix banner on small screens

--- a/src/css/components/slider/slider.css
+++ b/src/css/components/slider/slider.css
@@ -13,11 +13,22 @@
 .Slider-link:focus,
 .Slider-link:hover {
     color: inherit;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     text-decoration: none;
 }
 
 .Slider-image {
     height: auto;
+    height: 100%;
+    width: 100%;
+}
+
+/* postcss-bem-linter: ignore */
+.Slider-image > img {
+    height: 100%;
+    object-fit: cover;
     width: 100%;
 }
 
